# akshare_python

./: .gitignore  CHERRYSTUDIO_CONFIG.md  CLINE_USAGE_GUIDE.md  CONFIGURATION.md  MCP_CONNECTION_GUIDE.md  README.md  pyproject.toml  test_fixed_server.py
.cline/: project_structure.md  python_exec.md
output/: 阳光电源下周操作建议_详细分析.md  阳光电源下周操作指南_小红书风格.md
prompt/: 股票分析维度.md  股票分析维度_小红书优化版.md
scripts/: run_compatible_server.py  run_finance_server.py  run_fixed_server.py  run_server.py  setup_project.py  start_mcp_server.py  test_mcp_service.py
src/main/crawler_services/red_ring/: enhanced_essence_crawler.py  main.py  red_ring_essence.db  test_comments_crawler.py
src/main/mcp_services/finance_server/: finance_server.py  finance_tools.py
src/mcp_server/: __init__.py  compatible_server.py  finance_server.py  finance_tools.py  fixed_server.py  server.py
src/tests/: test_all_mcp_tools.py  test_fixed_tools.py  test_integrated_server.py  test_mcp_final.py  test_mcp_simple.py  test_server.py
